New Kitchen-Sink (BETAc)

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -90,6 +90,14 @@
                 </a>
             </li>
 
+            <!-- Notifications -->
+            <li>
+                <a href="#pull" data-router="section">
+                    <strong>Pull & Refresh</strong>
+                    <small>Beautiful refresh event</small>
+                </a>
+            </li>
+
             <!-- Colours -->
             <li>
                 <a href="#color" data-router="section" data-title="Colours">
