--- a/kitchen-sink/app/sections/icon.html
+++ b/kitchen-sink/app/sections/icon.html
@@ -1,6 +1,6 @@
 <section id="icon" data-transition="slide">
     <header class="extended" data-title="Icons Repository">
-        <nav class="button">
+        <nav class="box">
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
