--- a/kitchen-sink/app/sections/layout.html
+++ b/kitchen-sink/app/sections/layout.html
@@ -1,9 +1,9 @@
 <section id="layout" data-transition="slide">
     <header data-title="Layout" class="extended">
-        <nav class="button">
+        <nav class="box">
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
-        <nav class="right button">
+        <nav class="right box">
             <a href="#splash" data-router="section" data-icon="user" data-label="Splash"></a>
         </nav>
     </header>
