--- a/kitchen-sink/app/sections/touchevents.html
+++ b/kitchen-sink/app/sections/touchevents.html
@@ -1,6 +1,6 @@
 <section id="touchevents" data-transition="slide">
     <header data-title="Touch Events">
-        <nav class="button">
+        <nav class="box">
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
