New beta version (d)

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -56,7 +56,7 @@
             <div class="left">
                 <div class="centered title with-subtitle">
                     Lungo Framework
-                    <small class="subtitle">version 2</small>
+                    <small class="subtitle">BETA 2.d</small>
                 </div>
                 </div>
         </header>
