Button in lists

--- a/kitchen-sink/app/sections/list.html
+++ b/kitchen-sink/app/sections/list.html
@@ -95,6 +95,14 @@
                 </a>
             </li>
 
+            <li>
+                <a href="#">
+                    <a href="#" class="button small red right" data-label="delete"></a>
+                    <strong>&lt;strong&gt; element</strong>
+                    <small>with &lt;small&gt; element</small>
+                </a>
+            </li>
+
             <li class="anchor">With data-icon or data-image attribute</li>
             <li data-image="http://lungo.tapquo.com/resources/icon@2x.png">
                 <strong>&lt;li data-image&gt; + &lt;strong&gt; </strong>
