Form default margin: 0

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -55,8 +55,8 @@
             </nav>
             <div class="left">
                 <div class="centered title with-subtitle">
-                    Lungo Framework
-                    <small class="subtitle">BETA 2.d</small>
+                    Lungo
+                    <small class="subtitle">HTML5 Cross-Device Framework</small>
                 </div>
                 </div>
         </header>
