Fix example list with .right .button

--- a/kitchen-sink/app/sections/list.html
+++ b/kitchen-sink/app/sections/list.html
@@ -97,7 +97,7 @@
 
             <li>
                 <a href="#">
-                    <a href="#" class="button small red right" data-label="delete"></a>
+                    <a href="#" class="button small red right" data-label="button"></a>
                     <strong>&lt;strong&gt; element</strong>
                     <small>with &lt;small&gt; element</small>
                 </a>
@@ -221,6 +221,15 @@
                     <small>with &lt;small&gt; element</small>
                 </a>
             </li>
+
+            <li>
+                <a href="#">
+                    <a href="#" class="button small red right" data-label="button"></a>
+                    <strong>&lt;strong&gt; element</strong>
+                    <small>with &lt;small&gt; element</small>
+                </a>
+            </li>
+
 
             <li class="anchor">With data-icon or data-image attribute</li>
             <li data-image="http://lungo.tapquo.com/resources/icon@2x.png">
