Layout events (section or article)

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -81,6 +81,15 @@
                 </a>
             </li>
 
+            <!-- Layout Events -->
+            <li>
+                <a href="#layoutevents" data-router="section">
+                    <div class="bubble right">2</div>
+                    <strong>Layout Events</strong>
+                    <small>Load & Unload</small>
+                </a>
+            </li>
+
             <!-- Notifications -->
             <li>
                 <a href="#notification" data-router="section">
