--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -149,6 +149,8 @@
                         'app/sections/form.html',
                         'app/sections/aside.html',
                         'app/sections/touchevents.html',
+                        'app/sections/layoutevents.html',
+
                         'app/sections/splash.html',
                         'app/sections/data-attribute.html',
                         'app/sections/scroll.html',
@@ -168,6 +170,8 @@
         <script src="app/events.notification.js"></script>
         <script src="app/events.touch.js"></script>
         <script src="app/events.pull.js"></script>
+        <script src="app/events.trigger.js"></script>
+
 
 </body>
 </html>
