Carousel simplest example

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -90,11 +90,19 @@
                 </a>
             </li>
 
-            <!-- Notifications -->
+            <!-- Pull & Refresh -->
             <li>
                 <a href="#pull" data-router="section">
                     <strong>Pull & Refresh</strong>
                     <small>Beautiful refresh event</small>
+                </a>
+            </li>
+
+            <!-- Carousel -->
+            <li>
+                <a href="#carousel" data-router="section">
+                    <strong>Carousel</strong>
+                    <small>Carousel images example</small>
                 </a>
             </li>
 
