--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -154,6 +154,7 @@
                         'app/sections/scroll.html',
                         'app/sections/color.html',
                         'app/sections/pull.html',
+                        'app/sections/carousel.html',
                         'app/asides/features.html',
                         'app/asides/left.html',
                         'app/asides/right.html']
@@ -168,6 +169,7 @@
         <script src="app/events.notification.js"></script>
         <script src="app/events.touch.js"></script>
         <script src="app/events.pull.js"></script>
+        <script src="app/events.carousel.js"></script>
 
 </body>
 </html>
