--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -1,11 +1,11 @@
 <aside id="features" class="left">
-    <header data-title="BETA Features"></header>
+    <header data-title="Features"></header>
     <article class="list scroll">
         <ul>
             <!-- Basic Layout -->
             <li class="current">
                 <a href="#main-article" data-router="article">
-                    <strong>Meet the frameworks</strong>
+                    <strong>Meet the framework</strong>
                     <small>A brief summary of features.</small>
                 </a>
             </li>
@@ -112,6 +112,14 @@
                 <a href="#carousel" data-router="section">
                     <strong>Carousel</strong>
                     <small>Carousel images example</small>
+                </a>
+            </li>
+
+            <!-- Environment -->
+            <li>
+                <a href="#environment" data-router="section">
+                    <strong>Environment</strong>
+                    <small>How much do you know of your device?</small>
                 </a>
             </li>
 
