--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -150,21 +150,17 @@
                         'app/sections/aside.html',
                         'app/sections/touchevents.html',
                         'app/sections/layoutevents.html',
-
                         'app/sections/splash.html',
                         'app/sections/data-attribute.html',
                         'app/sections/scroll.html',
                         'app/sections/color.html',
                         'app/sections/pull.html',
                         'app/sections/carousel.html',
+                        'app/sections/environment.html',
                         'app/asides/features.html',
                         'app/asides/left.html',
                         'app/asides/right.html']
 
-        });
-
-        Lungo.ready(function() {
-            Lungo.View.Aside.show('features');
         });
     </script>
     <script src="app/app.js"></script>
