--- a/kitchen-sink/app/sections/carousel.html
+++ b/kitchen-sink/app/sections/carousel.html
@@ -1,51 +1,50 @@
 <section id="carousel" data-transition="slide">
-    <header data-title="Carousel">
+    <header>
         <nav class="box">
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
+
+        <div class="centered title with-subtitle">
+            Carousel
+            <small class="subtitle">Photo Nº<span>1</span></small>
+        </div>
+
+        <nav class="right box">
+            <a href="#" data-action="carousel" data-direction="left" data-icon="left"></a>
+            <a href="#" data-action="carousel" data-direction="right" data-icon="right"></a>
+        </nav>
     </header>
-    <article id="carousel-article" class="indented">
+    <article id="carousel-article">
         <div data-control="carousel" class="carousel">
             <div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/food/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/food/">
                 </div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/sports/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/sports/">
                 </div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/people/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/people/">
                 </div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/abstract/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/abstract/">
                 </div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/city/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/city/">
                 </div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/transport/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/transport/">
                 </div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/nature/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/nature/">
                 </div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/fashion/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/fashion/">
                 </div>
                 <div align="center">
-                    <img src="http://lorempixel.com/256/128/technics/">
-                    <p>Example of carousel</p>
+                    <img src="http://lorempixel.com/320/418/technics/">
                 </div>
             </div>
         </div>
-
     </article>
-
 </section>
