Aside Feature, fix counts :)

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -102,6 +102,7 @@
             <!-- Pull & Refresh -->
             <li>
                 <a href="#pull" data-router="section">
+                    <div class="bubble right">1</div>
                     <strong>Pull & Refresh</strong>
                     <small>Beautiful refresh event</small>
                 </a>
@@ -110,6 +111,7 @@
             <!-- Carousel -->
             <li>
                 <a href="#carousel" data-router="section">
+                    <div class="bubble right">1</div>
                     <strong>Carousel</strong>
                     <small>Carousel images example</small>
                 </a>
@@ -118,6 +120,7 @@
             <!-- Environment -->
             <li>
                 <a href="#environment" data-router="section">
+                    <div class="bubble right">1</div>
                     <strong>Environment</strong>
                     <small>How much do you know of your device?</small>
                 </a>
