--- a/kitchen-sink/app/sections/data-attribute.html
+++ b/kitchen-sink/app/sections/data-attribute.html
@@ -12,7 +12,7 @@
                 <small>Creates an icon Lungo vectorized</small>
             </li>
 
-            <li data-image="http://lungo.tapquo.com/resources/icon@2x.png">
+            <li data-image="http://lungo.tapquo.com/resources/icon-144.png">
                 <strong>data-image</strong>
                 <small>Instance a &lt;img&gt; automatically</small>
             </li>
