--- a/kitchen-sink/app/sections/splash.html
+++ b/kitchen-sink/app/sections/splash.html
@@ -1,6 +1,6 @@
 <section id="splash" data-transition="slide">
     <article class="indented splash">
-        <img src="images/logo.png"/>
+        <img src="http://lungo.tapquo.com/resources/logo_splash.png"/>
         <form class="rounded">
             <input type="text" placeholder="Your username" id="txt-signup-name" value="">
             <input type="password" placeholder="Your password" id="txt-signup-password" value="">
