--- a/kitchen-sink/app/sections/list.html
+++ b/kitchen-sink/app/sections/list.html
@@ -104,11 +104,11 @@
             </li>
 
             <li class="anchor">With data-icon or data-image attribute</li>
-            <li data-image="http://lungo.tapquo.com/resources/icon@2x.png">
+            <li data-image="http://lungo.tapquo.com/resources/icon-144.png">
                 <strong>&lt;li data-image&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
-            <li class=" thumb" data-image="http://lungo.tapquo.com/resources/icon@2x.png">
+            <li class=" thumb" data-image="http://lungo.tapquo.com/resources/icon-144.png">
                 <strong>&lt;li .thumb data-image&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
@@ -232,11 +232,11 @@
 
 
             <li class="anchor">With data-icon or data-image attribute</li>
-            <li data-image="http://lungo.tapquo.com/resources/icon@2x.png">
+            <li data-image="http://lungo.tapquo.com/resources/icon-144.png">
                 <strong>&lt;li data-image&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
-            <li class=" thumb" data-image="http://lungo.tapquo.com/resources/icon@2x.png">
+            <li class=" thumb" data-image="http://lungo.tapquo.com/resources/icon-144.png">
                 <strong>&lt;li .thumb data-image&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
