--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -88,7 +88,7 @@
             </div>
         </header>
 
-        <article id="main-article" class="list indented scroll">
+        <article id="main-article" class="list indented overthrow">
             <ul>
                 <li class="dark">
                     <strong>
@@ -161,6 +161,10 @@
     <script src="../src/boot/Lungo.Boot.Data.js"></script>
     <script src="../src/boot/Lungo.Boot.Section.js"></script>
     <script src="../src/boot/Lungo.Boot.Article.js"></script>
+
+
+    <script src="../src/Lungo.Scroll.js"></script>
+
 
     <!-- LungoJS - Sandbox App -->
     <script>
