--- a/kitchen-sink/app/sections/color.html
+++ b/kitchen-sink/app/sections/color.html
@@ -6,19 +6,19 @@
     </header>
     <article class="scroll indented">
         <div>
-            <a href="#" class="button big">default</a>
-            <a href="#" class="button big disabled">disabled</a>
-            <a href="#" class="button big red">red</a>
-            <a href="#" class="button big lightgreen">lightgreen</a>
-            <a href="#" class="button big green">green</a>
-            <a href="#" class="button big blue">blue</a>
-            <a href="#" class="button big arcticblue">articblue</a>
-            <a href="#" class="button big orange">orange</a>
-            <a href="#" class="button big magenta">magenta</a>
-            <a href="#" class="button big pink">pink</a>
-            <a href="#" class="button big yellow">yellow</a>
-            <a href="#" class="button big twitter">twitter</a>
-            <a href="#" class="button big facebook">facebook</a>
+            <a href="#" class="button anchor">default</a>
+            <a href="#" class="button anchor disabled">disabled</a>
+            <a href="#" class="button anchor red">red</a>
+            <a href="#" class="button anchor lightgreen">lightgreen</a>
+            <a href="#" class="button anchor green">green</a>
+            <a href="#" class="button anchor blue">blue</a>
+            <a href="#" class="button anchor arcticblue">articblue</a>
+            <a href="#" class="button anchor orange">orange</a>
+            <a href="#" class="button anchor magenta">magenta</a>
+            <a href="#" class="button anchor pink">pink</a>
+            <a href="#" class="button anchor yellow">yellow</a>
+            <a href="#" class="button anchor twitter">twitter</a>
+            <a href="#" class="button anchor facebook">facebook</a>
         </div>
     </article>
 </section>
