--- a/kitchen-sink/app/sections/aside.html
+++ b/kitchen-sink/app/sections/aside.html
@@ -6,8 +6,8 @@
     </header>
     <article id="aside-example" class="indented">
         <div>
-            <a href="#left" data-router="aside" data-icon="left" class="button big blue">Example of normal aside</a>
-            <a href="#right" data-router="aside" data-icon="right" class="button big red">Example of mini right aside</a>
+            <a href="#left" data-router="aside" data-icon="left" class="button anchor blue">Example of normal aside</a>
+            <a href="#right" data-router="aside" data-icon="right" class="button anchor red">Example of mini right aside</a>
         </div>
     </article>
 </section>
