--- a/kitchen-sink/app/sections/splash.html
+++ b/kitchen-sink/app/sections/splash.html
@@ -5,7 +5,7 @@
             <input type="text" placeholder="Your username" id="txt-signup-name" value="">
             <input type="password" placeholder="Your password" id="txt-signup-password" value="">
             <a href="#" class="button blue big" data-icon="checkmark" data-icon="user">Login</a>
-            <a href="#back" data-router="section" class="button big" data-icon="left">Return to Kichensink</a>
+            <a href="#back" data-router="section" class="button anchor" data-icon="left">Return to Kichensink</a>
         </form>
     </article>
 </section>
