--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -113,7 +113,7 @@
                 </li>
 
                 <li>
-                    <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="brand twitter" target="_blank" class="button big theme" data-label="Tweet me"></a>
+                    <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="brand twitter" target="_blank" class="button anchor theme" data-label="Tweet me"></a>
 
                 </li>
             </ul>
@@ -162,9 +162,7 @@
     <script src="../src/boot/Lungo.Boot.Section.js"></script>
     <script src="../src/boot/Lungo.Boot.Article.js"></script>
 
-
     <script src="../src/Lungo.Scroll.js"></script>
-
 
     <!-- LungoJS - Sandbox App -->
     <script>
