--- a/kitchen-sink/app/sections/form.html
+++ b/kitchen-sink/app/sections/form.html
@@ -41,10 +41,10 @@
                 <input type="range" min="0" max="1" class="checkbox right active" value="1">
             </div>
                 <div class="four columns left">
-                    <a href="#" class="button big theme" data-label="Accept" data-icon="check"></a>
+                    <a href="#" class="button anchor theme" data-label="Accept" data-icon="check"></a>
                 </div>
                 <div class="four columns right">
-                    <a href="#" class="button big red" data-label="Cancel" data-icon="close"></a>
+                    <a href="#" class="button anchor red" data-label="Cancel" data-icon="close"></a>
                 </div>
         </form>
 
