Change font weight to 300

--- a/kitchen-sink/app/sections/color.html
+++ b/kitchen-sink/app/sections/color.html
@@ -6,7 +6,9 @@
     </header>
     <article class="scroll indented">
         <div>
-            <a href="#" class="button anchor">default</a>
+            <a href="#" class="button small blue">default</a>
+            <a href="#" class="button large blue">default</a>
+
             <a href="#" class="button anchor disabled">disabled</a>
             <a href="#" class="button anchor red">red</a>
             <a href="#" class="button anchor lightgreen">lightgreen</a>
