--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -81,11 +81,11 @@
                 <a href="#features" data-router="aside" data-icon="menu"></a>
             </nav>
             <div class="left">
-                <div class="centered title with-subtitle">
-                    Lungo
-                    <small class="subtitle">HTML5 Cross-Device Framework</small>
-                </div>
+                <div class="centered title">Lungo</div>
             </div>
+            <nav class="right ">
+                <a href="#features" data-router="aside" data-icon="menu"></a>
+            </nav>
         </header>
 
         <article id="main-article" class="list indented scroll">
@@ -162,7 +162,9 @@
     <script src="../src/boot/Lungo.Boot.Section.js"></script>
     <script src="../src/boot/Lungo.Boot.Article.js"></script>
 
+    <!--
     <script src="../src/Lungo.Scroll.js"></script>
+    -->
 
     <!-- LungoJS - Sandbox App -->
     <script>
