Changes in stylesheets

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -71,7 +71,7 @@
     <link rel="stylesheet" href="../package/lungo.theme.default.css">
     -->
     <!-- App Stylesheet -->
-    <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="-stylesheets/app.css">
 </head>
 
 <body class="app">
@@ -95,19 +95,19 @@
                     A framework for developers who want to design, build and share cross device apps.
                 </strong>
                 </li>
-                <li data-icon="brand html5" class="feature">
+                <li class="feature">
                     <strong>HTML5 Optimized Apps</strong>
                     Lungo Framework supports open web standards, such as HTML5, CSS3 and JavaScript. It brings consistent browser environment across mobiles, tvs and desktop devices.
                 </li>
-                <li data-icon="brand github-2" class="feature">
+                <li class="feature">
                     <strong>Open Source Project</strong>
                     Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
                 </li>
-                <li data-icon="book" class="feature">
+                <li class="feature">
                     <strong>Powerfull JavaScript API</strong>
                     Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
                 </li>
-                <li data-icon="brand branch" class="feature">
+                <li class="feature">
                     <strong>Multi-Device full support</strong>
                     Is known that create apps for each platform is expensive, this situation is increased by the arrival of tablets and SmartTVs. Lungo will suit all of them creating a unique and amazing UX.
                 </li>
