--- a/kitchen-sink/app/sections/color.html
+++ b/kitchen-sink/app/sections/color.html
@@ -6,21 +6,21 @@
     </header>
     <article class="scroll indented">
         <div>
-            <a href="#" class="button small blue">default</a>
-            <a href="#" class="button large blue">default</a>
-
-            <a href="#" class="button anchor disabled">disabled</a>
-            <a href="#" class="button anchor red">red</a>
-            <a href="#" class="button anchor lightgreen">lightgreen</a>
-            <a href="#" class="button anchor green">green</a>
-            <a href="#" class="button anchor blue">blue</a>
-            <a href="#" class="button anchor arcticblue">articblue</a>
-            <a href="#" class="button anchor orange">orange</a>
-            <a href="#" class="button anchor magenta">magenta</a>
-            <a href="#" class="button anchor pink">pink</a>
-            <a href="#" class="button anchor yellow">yellow</a>
-            <a href="#" class="button anchor twitter">twitter</a>
-            <a href="#" class="button anchor facebook">facebook</a>
+            <h1>Sizes</h1>
+            <p class="margin bottom">
+                <a href="#" class="button small">small</a>
+                <a href="#" class="button">default</a>
+                <a href="#" class="button large">large</a>
+            </p>
+            <a href="#" class="button anchor margin bottom">anchor</a>
+            <h1>Colors</h1>
+            <p>
+                <a href="#" class="button anchor margin bottom">default</a>
+                <a href="#" class="button anchor secondary margin bottom">secondary</a>
+                <a href="#" class="button anchor accept margin bottom">accept</a>
+                <a href="#" class="button anchor cancel margin bottom">cancel</a>
+                <a href="#" class="button anchor margin bottom" disabled=true>disabled</a>
+            </p>
         </div>
     </article>
 </section>
