New style for lists

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -112,11 +112,11 @@
                 </a>
             </li>
 
-            <!-- Colours -->
+            <!-- Buttons & Colours -->
             <li>
                 <a href="#color" data-router="section" data-title="Colours">
                     <div class="bubble right">14</div>
-                    <strong>Colors</strong>
+                    <strong>Buttons & Colours</strong>
                 </a>
             </li>
 
