--- a/kitchen-sink/app/sections/list.html
+++ b/kitchen-sink/app/sections/list.html
@@ -250,16 +250,20 @@
             </li>
 
             <li class="anchor">With colours</li>
-            <li class="blue">
-                <strong>&lt;li .blue&gt; + &lt;strong&gt; </strong>
+            <li class="theme">
+                <strong>&lt;li .theme&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
-            <li class="green">
-                <strong>&lt;li .green&gt; + &lt;strong&gt; </strong>
+            <li class="accept">
+                <strong>&lt;li .accept&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
-            <li class="yellow">
-                <strong>&lt;li .yellow&gt; + &lt;strong&gt; </strong>
+            <li class="cancel">
+                <strong>&lt;li .cancel&gt; + &lt;strong&gt; </strong>
+                <small>&lt;small&gt;</small>
+            </li>
+            <li class="secondary">
+                <strong>&lt;li .secondary&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
         </ul>
