--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -81,12 +81,52 @@
                 <a href="#features" data-router="aside" data-icon="menu"></a>
             </nav>
             <div class="left">
-                <div class="centered title">Lungo</div>
+                <div class="centered title">Recibidos</div>
             </div>
             <nav class="right ">
                 <a href="#features" data-router="aside" data-icon="menu"></a>
             </nav>
         </header>
+
+        <article id="main-article" class="list  scroll">
+            <ul>
+                <li class="feature">
+                    <div class="right  ">15:49</div>
+                    <strong class="text bold">Enrique Amodeo Rubio</strong>
+                    <div class="text small">[madridJS] [JOB] Front Developer Position</div>
+                    <small>
+                        <div class="right bubble blue">tapquo</div>
+                        Hola a todos, nos llega esta oportunida muy inteeresante
+                    </small>
+                </li>
+                <li class="feature">
+                    <div class="right  ">15:49</div>
+                    <strong class="text normal">Enrique Amodeo Rubio</strong>
+                    <small class="text small">[madridJS] [JOB] Front Developer Position</small>
+                    <small>
+                        <div class="right bubble red">tapquo</div>
+                        Hola a todos, nos llega esta oportunida muy inteeresante
+                    </small>
+                </li>
+                <li class="feature">
+                    <strong class="text bold">Open Source Project</strong>
+                    <p class="text thin">Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.</p>
+                </li>
+                <li class="feature">
+                    <strong>Powerfull JavaScript API</strong>
+                    Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
+                </li>
+                <li class="feature">
+                    <strong>Multi-Device full support</strong>
+                    Is known that create apps for each platform is expensive, this situation is increased by the arrival of tablets and SmartTVs. Lungo will suit all of them creating a unique and amazing UX.
+                </li>
+
+                <li>
+                    <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="brand twitter" target="_blank" class="button anchor theme" data-label="Tweet me"></a>
+
+                </li>
+            </ul>
+        </article>
 
         <article id="main-article" class="list indented scroll">
             <ul>
