Remove .bubble class to .tag

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -12,7 +12,7 @@
             <!-- Layout & Navigation -->
             <li>
                 <a href="#layout" data-router="section">
-                    <div class="bubble right">5</div>
+                    <div class="tag secondary right">5</div>
                     <strong>Layout</strong>
                 </a>
             </li>
@@ -27,7 +27,7 @@
             <!-- Forms -->
             <li>
                 <a href="#form" data-router="section">
-                    <div class="bubble right">8</div>
+                    <div class="tag right">8</div>
                     <strong>Form Elements</strong>
                 </a>
             </li>
@@ -35,7 +35,7 @@
             <!-- Asides -->
             <li>
                 <a href="#aside" data-router="section">
-                    <div class="bubble right">8</div>
+                    <div class="tag right">8</div>
                     <strong>Asides</strong>
                 </a>
             </li>
@@ -43,7 +43,7 @@
             <!-- Data-Attributes -->
             <li>
                 <a href="#data" data-router="section">
-                    <div class="bubble right">9</div>
+                    <div class="tag right">9</div>
                     <strong>Data-attributes</strong>
                 </a>
             </li>
@@ -51,7 +51,7 @@
             <!-- Icons -->
             <li>
                 <a href="#icon" data-router="section">
-                    <div class="bubble right">109</div>
+                    <div class="tag right">109</div>
                     <strong>Icons</strong>
                 </a>
             </li>
@@ -59,7 +59,7 @@
             <!-- Scrolls -->
             <li>
                 <a href="#scroll" data-router="section">
-                    <div class="bubble right">2</div>
+                    <div class="tag right">2</div>
                     <strong>Scrolls</strong>
                 </a>
             </li>
@@ -67,7 +67,7 @@
             <!-- Touch Events -->
             <li>
                 <a href="#touchevents" data-router="section">
-                    <div class="bubble right">19</div>
+                    <div class="tag right">19</div>
                     <strong>Touch Events</strong>
                 </a>
             </li>
@@ -75,7 +75,7 @@
             <!-- Layout Events -->
             <li>
                 <a href="#layoutevents" data-router="section">
-                    <div class="bubble right">2</div>
+                    <div class="tag right">2</div>
                     <strong>Layout Events</strong>
                 </a>
             </li>
@@ -83,7 +83,7 @@
             <!-- Notifications -->
             <li>
                 <a href="#notification" data-router="section">
-                    <div class="bubble right">8</div>
+                    <div class="tag right">8</div>
                     <strong>Notifications</strong>
                 </a>
             </li>
@@ -91,7 +91,7 @@
             <!-- Pull & Refresh -->
             <li>
                 <a href="#pull" data-router="section">
-                    <div class="bubble right">1</div>
+                    <div class="tag right">1</div>
                     <strong>Pull & Refresh</strong>
                 </a>
             </li>
@@ -99,7 +99,7 @@
             <!-- Carousel -->
             <li>
                 <a href="#carousel" data-router="section">
-                    <div class="bubble right">1</div>
+                    <div class="tag right">1</div>
                     <strong>Carousel</strong>
                 </a>
             </li>
@@ -107,7 +107,7 @@
             <!-- Environment -->
             <li>
                 <a href="#environment" data-router="section">
-                    <div class="bubble right">1</div>
+                    <div class="tag right">1</div>
                     <strong>Environment</strong>
                 </a>
             </li>
@@ -115,7 +115,7 @@
             <!-- Buttons & Colours -->
             <li>
                 <a href="#color" data-router="section" data-title="Colours">
-                    <div class="bubble right">14</div>
+                    <div class="tag right">14</div>
                     <strong>Buttons & Colours</strong>
                 </a>
             </li>
