--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -56,7 +56,6 @@
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.splash.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.button.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.form.css">
-    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.colour.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.icon.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.icon.brand.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.loading.css">
@@ -76,7 +75,7 @@
 
 <body class="app">
     <section id="main" data-transition="slide">
-        <header  class="">
+        <header>
             <nav class="left box">
                 <a href="#features" data-router="aside" data-icon="menu"></a>
             </nav>
@@ -95,7 +94,7 @@
                     <strong class="text bold">Enrique Amodeo Rubio</strong>
                     <div class="text small">[madridJS] [JOB] Front Developer Position</div>
                     <small>
-                        <div class="right bubble blue">tapquo</div>
+                        <div class="right tag secondary">tapquo</div>
                         Hola a todos, nos llega esta oportunida muy inteeresante
                     </small>
                 </li>
@@ -104,7 +103,7 @@
                     <strong class="text normal">Enrique Amodeo Rubio</strong>
                     <small class="text small">[madridJS] [JOB] Front Developer Position</small>
                     <small>
-                        <div class="right bubble red">tapquo</div>
+                        <div class="right tag cancel">tapquo</div>
                         Hola a todos, nos llega esta oportunida muy inteeresante
                     </small>
                 </li>
