Buttons in <header/>

--- a/kitchen-sink/app/sections/layout.html
+++ b/kitchen-sink/app/sections/layout.html
@@ -3,8 +3,8 @@
         <nav class="box">
             <a href="#back" data-router="section" data-label="back"></a>
         </nav>
-        <nav class="right box">
-            <a href="#splash" data-router="section" data-icon="user" data-label="Splash"></a>
+        <nav class="right">
+            <a href="#splash" class="button" data-router="section" data-icon="user" data-label="Splash"></a>
         </nav>
     </header>
 
