--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -61,14 +61,8 @@
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.loading.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.notification.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.pull.css">
-
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.theme.default.css">
-    <!--
-    <link rel="stylesheet" href="../package/lungo.css">
-    <link rel="stylesheet" href="../package/lungo.icon.css">
-    <link rel="stylesheet" href="../package/lungo.icon.brand.css">
-    <link rel="stylesheet" href="../package/lungo.theme.default.css">
-    -->
+
     <!-- App Stylesheet -->
     <link rel="stylesheet" href="-stylesheets/app.css">
 </head>
@@ -82,8 +76,9 @@
             <div class="left">
                 <div class="centered title">Recibidos</div>
             </div>
-            <nav class="right ">
-                <a href="#features" data-router="aside" data-icon="menu"></a>
+
+            <nav class="right box">
+                <a href="#" class="buttons" data-icon="mail"></a>
             </nav>
         </header>
 
@@ -94,7 +89,7 @@
                     <strong class="text bold">Enrique Amodeo Rubio</strong>
                     <div class="text small">[madridJS] [JOB] Front Developer Position</div>
                     <small>
-                        <div class="right tag secondary">tapquo</div>
+                        <div class="right tag ">tapquo</div>
                         Hola a todos, nos llega esta oportunida muy inteeresante
                     </small>
                 </li>
