Refactor stylesheets using STYLUS

--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -1,5 +1,10 @@
 <aside id="features" class="left">
-    <header data-title="Features"></header>
+    <header data-title="Features">
+        <nav class="right box">
+            <a href="#" class="buttons" data-icon="settings"></a>
+        </nav>
+    </header>
+
     <article class="list scroll">
         <ul>
             <!-- Basic Layout -->
