--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -64,7 +64,7 @@
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.theme.default.css">
 
     <!-- App Stylesheet -->
-    <link rel="stylesheet" href="-stylesheets/app.css">
+    <link rel="stylesheet" href="stylesheets/app.css">
 </head>
 
 <body class="app">
