--- a/kitchen-sink/app/asides/features.html
+++ b/kitchen-sink/app/asides/features.html
@@ -8,8 +8,13 @@
     <article class="list scroll">
         <ul>
             <!-- Basic Layout -->
-            <li class="current">
+            <li>
                 <a href="#main-article" data-router="article">
+                    <strong>Meet the framework</strong>
+                </a>
+            </li>
+            <li class="current">
+                <a href="#second-article" data-router="article">
                     <strong>Meet the framework</strong>
                 </a>
             </li>
