--- a/kitchen-sink/app/sections/list.html
+++ b/kitchen-sink/app/sections/list.html
@@ -81,7 +81,7 @@
 
             <li>
                 <a href="#">
-                    <div class="right bubble blue">.right.bubble</div>
+                    <div class="right tag blue">.right.tag</div>
                     <strong>&lt;strong&gt; element</strong>
                     <small>with &lt;small&gt; element</small>
                 </a>
@@ -89,7 +89,7 @@
 
             <li>
                 <a href="#">
-                    <div class="right bubble blue" data-icon="clock">.right data-icon</div>
+                    <div class="right tag blue" data-icon="clock">.right data-icon</div>
                     <strong>&lt;strong&gt; element</strong>
                     <small>with &lt;small&gt; element</small>
                 </a>
@@ -208,7 +208,7 @@
 
             <li>
                 <a href="#">
-                    <div class="right bubble blue">.right.bubble</div>
+                    <div class="right tag blue">.right.tag</div>
                     <strong>&lt;strong&gt; element</strong>
                     <small>with &lt;small&gt; element</small>
                 </a>
@@ -216,7 +216,7 @@
 
             <li>
                 <a href="#">
-                    <div class="right bubble blue" data-icon="clock">.right data-icon</div>
+                    <div class="right tag blue" data-icon="clock">.right data-icon</div>
                     <strong>&lt;strong&gt; element</strong>
                     <small>with &lt;small&gt; element</small>
                 </a>
