--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -82,14 +82,14 @@
             </nav>
         </header>
 
-        <article id="main-article" class="list  scroll">
+        <article id="second-article" class="list  scroll">
             <ul>
                 <li class="feature">
                     <div class="right  ">15:49</div>
                     <strong class="text bold">Enrique Amodeo Rubio</strong>
                     <div class="text small">[madridJS] [JOB] Front Developer Position</div>
                     <small>
-                        <div class="right tag ">tapquo</div>
+                        <div class="right tag ">theme</div>
                         Hola a todos, nos llega esta oportunida muy inteeresante
                     </small>
                 </li>
@@ -98,11 +98,12 @@
                     <strong class="text normal">Enrique Amodeo Rubio</strong>
                     <small class="text small">[madridJS] [JOB] Front Developer Position</small>
                     <small>
-                        <div class="right tag cancel">tapquo</div>
+                        <div class="right tag cancel">important</div>
                         Hola a todos, nos llega esta oportunida muy inteeresante
                     </small>
                 </li>
                 <li class="feature">
+                    <div class="right tag accept">sended</div>
                     <strong class="text bold">Open Source Project</strong>
                     <p class="text thin">Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.</p>
                 </li>
@@ -117,7 +118,7 @@
 
                 <li>
                     <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="brand twitter" target="_blank" class="button anchor theme" data-label="Tweet me"></a>
-
+                    <button data-icon="brand twitter" class="anchor theme" data-label="Tweet me"></button>
                 </li>
             </ul>
         </article>
